# aioptdevices

./: .gitignore  README.md  pyproject.toml  setup.ps1  setup.sh
.github/workflows/: publish-to-test-pypi-flow.yml  publish-workflow.yml
aioptdevices/: __init__.py  __main__.py  config.py  configuration.py  errors.py  interface.py
examples/: __init__.py  basic_usage.py
tests/: __init__.py  conftest.py  mock_api.py  test_connection.py
